# KernelImageProcessing

./: CMakeLists.txt  README.md  convolution_cpu.cpp  convolution_cpu.h  convolution_gpu.cu  convolution_gpu.h  image.cpp  image.h  kernel.cpp  kernel.h  main.cu  padding_image.cpp  padding_image.h
project_report/: kernel_image_processing_presentation.pptx
